fix issue on safari for ios with hero

--- a/app/assets/stylesheets/static_pages/index.css.scss
+++ b/app/assets/stylesheets/static_pages/index.css.scss
@@ -2,7 +2,7 @@
   #index {
 
     .hero-background {
-      background: image-url("home-page-hero-01.jpg") no-repeat center fixed;
+      background: image-url("home-page-hero-01.jpg") no-repeat center;
       margin: 0 auto;
       overflow: hidden;
       max-width: none;
